--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "twitch-react-app",
+  "name": "whack-a-duck",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "socket.io": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
