--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "http": "0.0.0",
     "react": "^16.3.1",
