--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "dotenv": "^5.0.1",
+    "eventmap": "^2.1.0",
     "express": "^4.16.3",
     "http": "0.0.0",
+    "matter-js": "^0.14.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-game-kit": "^1.0.6",
     "react-scripts": "1.1.4",
     "socket.io": "^2.1.0"
   },
