--- a/package.json
+++ b/package.json
@@ -2,19 +2,27 @@
   "name": "whack-a-duck",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001/",
   "dependencies": {
-    "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "http": "0.0.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4",
-    "socket.io": "^2.1.0"
+    "react-scripts": "^1.1.4",
+    "socket.io": "^2.1.0",
+    "socket.io-client": "^2.1.0",
+    "uuid": "^3.2.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently 'npm run react' 'npm run server'",
+    "react": "react-scripts start",
+    "server": "nodemon src/server/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "concurrently": "^3.5.1",
+    "nodemon": "^1.17.3"
   }
 }
