--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "babel": "^6.23.0",
     "express": "^4.16.3",
     "http": "0.0.0",
     "react": "^16.3.2",
@@ -11,7 +12,9 @@
     "react-scripts": "^1.1.4",
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.0",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "concurrently": "^3.5.1",
+    "nodemon": "^1.17.3"
   },
   "scripts": {
     "start": "concurrently 'npm run react' 'npm run server'",
@@ -22,7 +25,6 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "concurrently": "^3.5.1",
-    "nodemon": "^1.17.3"
+
   }
 }
