--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-scripts": "^1.1.4",
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.0",
-    "uuid": "^3.2.1",
+    "uuid4": "^3.2.1",
     "concurrently": "^3.5.1",
     "nodemon": "^1.17.3"
   },
