--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "concurrently": "^3.5.1",
     "nodemon": "^1.17.3"
   },
+  "engines": {
+    "node": "8.10.1"
+  },
   "scripts": {
     "start": "concurrently 'npm run react' 'npm run server'",
     "react": "react-scripts start",
