--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "http": "0.0.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.4",
+    "socket.io": "^2.1.0",
     "react-scripts": "^1.1.4",
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.0",
