--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "whack-a-duck",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001/",
   "dependencies": {
     "babel": "^6.23.0",
     "express": "^4.16.3",
@@ -10,8 +9,6 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4",
-    "socket.io": "^2.1.0",
     "react-scripts": "^1.1.4",
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.0",
@@ -30,7 +27,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
